# autobook

./: .gitignore  CNAME  check_alembic.py  check_server.py  deploy.py  fetch_migrations.py  fix_nginx.py  index.html
assets/: index-B4SGjKwI.js  index-B4zDSBGa.css  index-BApuWpxe.css  index-BBZUH0TI.js  index-BD_8TXj3.js  index-BIB0Bg0t.js  index-BP_qB3Rt.css  index-BrPGDg2d.css  index-BtoyfYpH.js  index-C1t7Md0J.js  index-C2Zj6HDG.js  index-C2nuPR9J.css  index-CFqniUpH.js  index-CG7ZxoNK.css  index-CJ2uSRGN.js  index-CMSpIuhh.js  index-CScHgR8A.css  index-CWYePNu-.js  index-CZdkG3v7.js  index-Cf51JUvE.js  index-Cp0UbsiN.css  index-CqPPhL2h.js  index-CqyFH6DC.js  index-CrJnouLx.js  index-Cw7RSReS.css  index-CzI96yte.css  index-D2DSZNpH.js  index-D3kc8yYP.js  index-D6Ndawoi.js  index-D7PubyuK.js  index-DBEDgzAu.css  index-DFg4tAC0.js  index-DHZ7LrQj.js  index-DThu55nu.js  (+14 more)
backend/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 39034170d5cf_add_planned_maintenance.py  4c3771da2eec_init.py  57f6c99e3790_add_odometer_updated_at.py  b2f4a1c8d3e5_add_maintenance_photos.py
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: __init__.py  fuel.py  maintenance.py  photo.py  planned.py  user.py  vehicle.py
backend/app/routers/: auth.py  fuel.py  maintenance.py  photos.py  planned.py  search.py  stats.py  vehicles.py
backend/app/schemas/: fuel.py  maintenance.py  photo.py  planned.py  stats.py  user.py  vehicle.py
backend/app/services/: auth.py  odometer.py
(+40 files in other folders)
